--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- Authentication.\r - Express Middleware.\r - JSON Web Tokens (JWTs).\r - Hashing Passwords.",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,16 @@
   },
   "homepage": "https://github.com/ajfrierson/auth-ii#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "create-react-app": "^2.1.5",
     "express": "^4.16.4",
-    "knex": "^0.16.3"
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.5.0",
+    "knex": "^0.16.3",
+    "react-router-dom": "^4.3.1",
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
